Cambio de Color de letra

--- a/css/style.css
+++ b/css/style.css
@@ -2,5 +2,5 @@ body {
     text-align: center;
     font-family: "Arial";
     background-color: wheat; 
-    color: white;
+    color: rgb(14, 1, 1);
 }
