--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,22 @@
 body {
     text-align: center;
     font-family: "Arial";
-    background-color: wheat; 
-    color: rgb(14, 1, 1);
+    /* background-color: rgb(205, 134, 2);  */
+    color: #333;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
+}
+
+.container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+.container h1{
+    font-size: 20px;
+
 }
