--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,40 @@ body {
 
 .container{
     width: 70%;
-    padding: 1em;
+    /* padding: ß1em; */
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
+
 }
 
 .container h1{
     font-size: 20px;
 
+}
+
+.cabecera{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgba(0,0 ,0, 0.5);
+    color: white;
+    margin: 0;
+    padding: 0.5em;
+    font-weight: bold;
+}
+
+.tagline{
+    padding: 1em 0 0 0;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
+
+.cabecera span{
+    color: white;
+    padding: 0 0 0 1em;
+    font-size: 0.8em;
+}
+
+.post{
+    padding: 1em;
 }
