--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    font-family: "Arial";
+    font-family: "Courier";
     /* background-color: rgb(205, 134, 2);  */
     color: #333;
     margin: 0;
