--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
     text-align: center;
-    font-family: "Courier";
+    font-family: "Arial";
     /* background-color: rgb(205, 134, 2);  */
     color: #333;
     margin: 0;
@@ -10,7 +10,7 @@ body {
 
 .container{
     width: 70%;
-    /* padding: ß1em; */
+    /* padding: 1em; */
     text-align: left;
     border: 1px solid #DDD;
     margin: 0 auto;
