--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     text-align: center;
     font-family: "Arial";
     /* background-color: rgb(205, 134, 2);  */
-    color: #333;
+    color: blue;
     margin: 0;
     padding: 0;
     font-size: 16px;
