--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,17 @@ body {
     text-align: center;
     font-family: "Arial";
     /* background-color: rgb(205, 134, 2);  */
-    color: gray;
+    color: #333;
     margin: 0;
     padding: 0;
     font-size: 16px;
+    background: #1e1f24;
+
+}
+
+img{
+    width: 25px;
+    vertical-align: middle;
 }
 
 .container{
@@ -46,4 +53,5 @@ body {
 
 .post{
     padding: 1em;
+    background: white;
 }
