Mejora de background del Footer

--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,7 @@ img{
 }
 
 .footer{
-    background: black;
+    background: rgba(108, 106, 106, 0.427);
     width: 70%;
     margin: 0 auto;
     height: 30px;
